; ModuleID = '/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yy_switch_to_buffer.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yy_switch_to_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32* }
%struct.yyguts_t = type { i32, i32, i32*, i32 }

@YY_CURRENT_BUFFER = common dso_local global %struct.TYPE_5__* null, align 8
@YY_CURRENT_BUFFER_LVALUE = common dso_local global %struct.TYPE_5__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @yy_switch_to_buffer(%struct.TYPE_5__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.yyguts_t*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = inttoptr i64 %6 to %struct.yyguts_t*
  store %struct.yyguts_t* %7, %struct.yyguts_t** %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @yyensure_buffer_stack(i64 %8)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @YY_CURRENT_BUFFER, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %12 = icmp eq %struct.TYPE_5__* %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  br label %40

14:                                               ; preds = %2
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @YY_CURRENT_BUFFER, align 8
  %16 = icmp ne %struct.TYPE_5__* %15, null
  br i1 %16, label %17, label %34

17:                                               ; preds = %14
  %18 = load %struct.yyguts_t*, %struct.yyguts_t** %5, align 8
  %19 = getelementptr inbounds %struct.yyguts_t, %struct.yyguts_t* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.yyguts_t*, %struct.yyguts_t** %5, align 8
  %22 = getelementptr inbounds %struct.yyguts_t, %struct.yyguts_t* %21, i32 0, i32 2
  %23 = load i32*, i32** %22, align 8
  store i32 %20, i32* %23, align 4
  %24 = load %struct.yyguts_t*, %struct.yyguts_t** %5, align 8
  %25 = getelementptr inbounds %struct.yyguts_t, %struct.yyguts_t* %24, i32 0, i32 2
  %26 = load i32*, i32** %25, align 8
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** @YY_CURRENT_BUFFER_LVALUE, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 1
  store i32* %26, i32** %28, align 8
  %29 = load %struct.yyguts_t*, %struct.yyguts_t** %5, align 8
  %30 = getelementptr inbounds %struct.yyguts_t, %struct.yyguts_t* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** @YY_CURRENT_BUFFER_LVALUE, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 8
  br label %34

34:                                               ; preds = %17, %14
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  store %struct.TYPE_5__* %35, %struct.TYPE_5__** @YY_CURRENT_BUFFER_LVALUE, align 8
  %36 = load i64, i64* %4, align 8
  %37 = call i32 @yy_load_buffer_state(i64 %36)
  %38 = load %struct.yyguts_t*, %struct.yyguts_t** %5, align 8
  %39 = getelementptr inbounds %struct.yyguts_t, %struct.yyguts_t* %38, i32 0, i32 0
  store i32 1, i32* %39, align 8
  br label %40

40:                                               ; preds = %34, %13
  ret void
}

declare dso_local i32 @yyensure_buffer_stack(i64) #1

declare dso_local i32 @yy_load_buffer_state(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
